--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.19.4 <3.0.0'
 
 dependencies:
+  arkit_plugin: ^1.0.7
   dio: ^5.3.2
   flutter:
     sdk: flutter
@@ -33,6 +34,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - .env
     - assets/loaders/
     - assets/images/
